fix: reset filters when rerun app (console recreate)
added:
Clearing log
Autoscroll when added new item
Autofocus textfield when click on class in log
Spoiler if message too large

--- a/src-bundle/.data/style/filteredTextField.fx.css
+++ b/src-bundle/.data/style/filteredTextField.fx.css
@@ -81,6 +81,10 @@
     -fx-border-width: 4;
 }
 
+.clear-button-log {
+    -fx-background-color: darkgray !important;
+}
+
 
 .log-data-time {
     -fx-text-fill: gray;
